# words-hunter

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PRD.md  Package.resolved  Package.swift  README.md  SCHEMA.md  TODOS.md  package.json
.github/workflows/: ci-macos.yml  ci-windows.yml  release.yml
Sources/WordsHunter/: main.swift
Sources/WordsHunter/App/: AppDelegate.swift
Sources/WordsHunter/Core/: EventMonitor.swift  TextCapture.swift  WordPageCreator.swift
Sources/WordsHunter/Models/: AppSettings.swift
Sources/WordsHunter/UI/: BubbleWindow.swift  SetupWindow.swift
Tests/WordsHunterTests/: CaptureAnimationTests.swift  WordIndexTests.swift  WordsHunterTests.swift
openclaw-plugin/: SKILL.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
openclaw-plugin/src/: callout-renderer.ts  cambridge-lookup.ts  discovery.ts  fill-word-page.ts  importer.ts  index.ts  sdk-shim.ts  types.ts  vault.ts  watcher.ts
openclaw-plugin/tests/: callout-renderer.test.ts  cambridge-lookup.test.ts  fill-word-page.test.ts  importer.test.ts  load-word.test.ts  record-mastery.test.ts  record-sighting.test.ts  scan-vault.test.ts  scheduler.test.ts  sighting-hook.test.ts  update-page.test.ts  vault-summary.test.ts  vault.test.ts
scripts/: build.sh  run.sh
src/: bubble.html  index.html  setup.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  bubble.rs  config.rs  dictionary.rs  hotkey.rs  lemmatizer.rs  lib.rs  main.rs  sightings.rs  text_capture.rs  vault.rs
(+32 files in other folders)
