[package]
name = "words-hunter"
version = "1.9.0.0"
description = "Words Hunter — capture words from any app on Windows"
authors = ["zzbyy"]
license = "MIT"
repository = "https://github.com/zzbyy/words-hunter"
edition = "2021"

[lib]
name = "words_hunter_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "words-hunter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.21"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
navalp = "0.2"
rodio = "0.19"
dirs = "6"
walkdir = "2"
chrono = "0.4"
thiserror = "2"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_StdLib",
    "Win32_System_Clipboard",
    "Win32_UI_Shell",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
